# linux-synchro

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  ClientEventReporter.cpp  ClientEventReporter.h  Descriptor.cpp  Descriptor.h  Dropbox.cpp  Dropbox.h  DropboxClient.cpp  DropboxClient.h  DropboxServer.cpp  DropboxServer.h  POSIXError.cpp  POSIXError.h  ProtocolEvent.h  SafeQueue.h  SafeSet.h  Server.cpp  Server.h  SocketWithMutex.h  TcpServer.cpp  TcpServer.h  TcpSocket.cpp  TcpSocket.h  client.cpp  editor.cpp  main.cpp  protocol.h  server.cpp  sync_test.sh  test.sh
InotifyInterface/: EventType.cpp  EventType.h  Inotify.cpp  Inotify.h  Notifier.cpp  Notifier.h  ReadMe.txt  test.cpp
InotifyInterface/__test__/: test.txt
__testServer__/: test2.txt
__test__/folder/: test1.txt
__test__/folder/subsub/: test3.txt
client/: ClientEventReporter.h
server/: DropboxServer.h  TcpServer.h
test/: big_test.sh  cyclic.sh  interrupt_test.sh  main.cpp  sync_test.sh  test.cpp  test.sh
